--- a/pages/knowledge.mdx
+++ b/pages/knowledge.mdx
@@ -2,43 +2,14 @@ import { Callout, Steps } from 'nextra/components';
 
 # Knowledge Notebooks
 
-**Lecca.io Knowledge Notebooks enable you to store and reuse valuable knowledge from your interactions with AI Agents, ultimately enhancing the agent's responses.**
+\*\*Lecca.io Knowledge Notebooks enable you to store and reuse valuable knowledge from your interactions with AI Agents.
 
 ## Configuring Knowledge Notebooks
 
 When setting up an AI Agent, you can enable various knowledge notebooks. This allows the agent to save and utilize knowledge relevant to your use cases.
 
-<Callout type="info">
-  Knowledge Notebooks ensure that the valuable insights accumulated during AI
-  interactions are not lost and can be retrieved whenever needed.
-</Callout>
-Saving Knowledge In the chat interface, you'll notice a book icon when you hover
-over any message. Clicking on this icon will prompt you to save the contents of that
-message to one or more selected knowledge notebooks.
+## Utilizing Saved Knowledge
 
-How to Save Knowledge
-
-<Steps>
-
-### Step 1: Hover Over Message
-
-Move your cursor over the message you want to save.
-
-### Step 2: Click the Book Icon
-
-A book icon will appear. Click on it.
-
-### Step 3: Select Knowledge Notebooks
-
-Choose the knowledge notebook(s) where you want to save the message content.
-
-### Step 4: Save
-
-Confirm the action to save the message contents to the selected knowledge notebooks.
-
-</Steps>
-
-Utilizing Saved Knowledge
 In future conversations, when you ask your AI Agent questions, the agent will reference the relevant knowledge stored in the notebooks to provide more precise and informed answers.
 
 <Callout type="info">
@@ -57,9 +28,7 @@ In future conversations, when you ask your AI Agent questions, the agent will re
 
 <Callout>
   There's an advantage in creating dedicated notebooks for different topics or
-  use cases, enhancing the efficiency of your AI Agent.{' '}
+  use cases.
 </Callout>
-Future Enhancements We have plans to integrate knowledge notebooks into our workflows,
-further extending their utility and automation capabilities.
 
 For further assistance, please contact support@lecca.io.
