--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -1,34 +1,21 @@
-import { Callout } from 'nextra/components';
+import { Callout, Cards, Card } from 'nextra/components';
 
-# Projects
+# Projects Overview
 
-**A project is a powerful way to organize your workpace's workflows and agents.**
+Lecca.io's **Projects** feature serves as an organizational tool designed to facilitate automation processes and manage access to your components efficiently. Below is an overview of what Projects can do and how they benefit you:
 
-<Callout type="info">
-  On the **Starter** plan, you can only have one project your workspace. Upgrade
-  to the **Professional** or **Team** plans to create multiple projects.
+<Callout emoji="📂" type="info">
+  Projects provide a structured way to organize and restrict access to various
+  components within Lecca.io, ensuring data integrity and facilitating
+  collaboration.
 </Callout>
 
-## Workflows
+## Key Features of Projects
 
-Workflows must be created within a project.
+- **Organizational Structure**: Projects allow you to organize components such as connections, variables, knowledge notebooks, workflows, and AI agents. This aids in maintaining a clean and efficient workspace tailored to specific tasks or objectives.
 
-Learn more about workflows at in our [Workflows documentation](/workflows)
+- **Component Integration**: Projects have the capacity to host connections to various applications, making it easy to integrate different tools within a workflow. They also manage variables and knowledge notebooks, which are crucial for powering workflows and AI agents.
 
-## Agents
+- **Workspace-Level Sharing**: While Projects focus on organization at a project level, components such as connections, variables, and notebooks can also be created at the workspace level. This feature allows for broader sharing and collaboration across different Projects within the workspace.
 
-Agents must be created within a project.
-
-Learn more about agents at in our [Agents documentation](/agents)
-
-## Variables
-
-Variables can be created at a workspace level, to be used by any project, but a variable can be created at a project level. If a variable is created at a project level, it can only be used within that project.
-
-Learn more about variables at in our [Variables documentation](/variables)
-
-## Connections
-
-Connections can be created at a workspace level, to be used by any project, but a connection can be created at a project level. If a connection is created at a project level, it can only be used within that project.
-
-Learn more about connections at in our [Connections documentation](/connections)
+- **Collaboration**: You can invite other users to join your Projects, fostering team collaboration. Once a user is added to a Project, they have full admin capabilities, allowing for dynamic interaction and management of the Project components.
