--- a/pages/triggers.mdx
+++ b/pages/triggers.mdx
@@ -12,7 +12,7 @@ Triggers initiate workflows and can be either polling-based or webhook-based.
 - **Professional Plan**: Checks for updates every 5 minutes.
 - **Team Plan**: Checks for updates every minute.
 
-### Webhooks
+### App Webhooks
 
 Webhook triggers fire instantly once our servers receive the trigger from the app.
 
@@ -20,6 +20,14 @@ Webhook triggers fire instantly once our servers receive the trigger from the ap
   Note: Choose your plan wisely based on how frequently you need your triggers
   to check for updates.
 </Callout>
+
+### Scheduled
+
+The Recurring Schedule trigger allows you to configure a schedule to trigger your workflows on.
+
+### Custom Webhook
+
+Create a custom webhook link that will execute your workflow.
 
 ## Adding a Trigger to a Workflow
 
