--- a/pages/workspaces.mdx
+++ b/pages/workspaces.mdx
@@ -1,46 +1,46 @@
-import { Cards, Card, Callout, Steps } from 'nextra/components';
+# Workspaces in Lecca.io
 
-# Workspaces
+In Lecca.io, Workspaces play a pivotal role in organizing and managing your automation projects, AI agents, workflows, connections, variables, and knowledge notebooks. This document will guide you through understanding and managing Workspaces effectively.
 
-**Workspaces in Lecca.io are where you organize your projects, collaborate with your team, and manage your automations and agents.**
+import { Callout, Steps, Tabs } from 'nextra/components';
 
-## Creating a new Workspace
+## Overview
 
-Setting up a workspace in Lecca.io helps you organize your projects and manage your resources efficiently. Follow these steps to create and configure your workspace.
+Everything in Lecca.io is organized within a Workspace. Key components such as projects, workflows, AI agents, connections, variables, and knowledge notebooks are created and managed within a Workspace. Access to these components is restricted to users who have access to the corresponding Workspace.
 
-<Callout type="info">
-  When you create an account, you will automatically have a personal workspace
-  created for you.
+<Callout emoji="🔑">
+  Access to a Workspace determines the visibility and interaction level with all
+  items contained within it.
 </Callout>
 
-<Steps>
-### Step 1: Create a new Workspace
+## Creating and Managing Workspaces
 
-1. At the top of your screen, click on your Workspace to display the workspace selection menu.
-2. Select **New Workspace** from the dropdown menu.
-3. Enter a name for your workspace and provide a brief description if needed.
-4. Click **Create** to create the workspace.
+### Default Workspace
 
-### Step 2: Complete onboarding
+Every user in Lecca.io starts with a default Workspace. This primary Workspace is crucial as it is the only Workspace that receives credits on the free tier. Therefore, it cannot be deleted. During onboarding, users will be prompted to join any Workspaces to which they have been invited.
 
-1. Our onboarding wizard will guide you through the process of setting up your new workspace.
+### Inviting and Joining Workspaces
 
-</Steps>
+Users can view and accept any pending Workspace invitations on their account page. This functionality helps maintain a collaborative environment within your organization.
 
-<Callout emoji="🚀">
-  Your workspace is now set up and ready for collaboration! Start creating
-  projects and workflow automations with your team.
+## Workspace Configuration
+
+Users with the role of a Maintainer have the capability to configure Workspace settings.
+
+### Workspace Roles
+
+Lecca.io distinguishes two roles within a Workspace:
+
+- **Maintainer**: Has full access to view and interact with all items within the Workspace.
+- **Member**: Can view and interact with their own projects and items set at a Workspace level.
+
+<Callout type="info" emoji="👥">
+  Assign roles wisely to ensure the security and privacy of your projects and
+  data.
 </Callout>
 
-## Managing your Workspace
+### Projects and Resources in Workspaces
 
-Only Maintainers can manage workspaces. As a Maintainer, you can invite team members, manage billing, and more.
+Projects in Lecca.io are housed within a Workspace. Additionally, variables, connections, and knowledge notebooks can be created and accessed at both project and Workspace levels. This flexibility ensures that resources can be shared among all Workspace members if needed.
 
-## Deleting your Workspace
-
-You can delete an additional workspace by going to your workspace settings, after you have cancelled your subscription. You can cancel your subscription by going to your workspace billing settings and clicking on the link **Manage payment methods**.
-
-<Callout>
-  You cannot delete your default created workspace (The workspace created when
-  you first made your account).
-</Callout>
+For further assistance or inquiries, please contact our support team at [support@lecca.io](mailto:support@lecca.io).
