updated docs with videos

--- a/pages/connections.mdx
+++ b/pages/connections.mdx
@@ -10,6 +10,18 @@ Lecca.io's Connections feature allows you to integrate with your favorite third-
   usually integrate it quickly.
 </Callout>
 
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/b83bJYakaR8?si=5d5fl0sok1imQFC_"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+
 ## Key Features
 
 - **Variety of Integration Types**: Supports API, OAuth2, Basic (username/password), and Key Pair (private/public key) integrations.
