--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,37 +1,84 @@
-import { Cards, Card, Callout } from 'nextra/components';
+import { Steps, Cards, Card, Callout } from 'nextra/components';
 
 # Lecca.io Documentation
 
 **Welcome to the Lecca.io documentation! We will provide all the information you need to create AI Agents and Workflow Automations.**
 
 <Callout emoji="👋" type="info">
-  Start here to learn how to set up your workspace, invite team members, create app connections, and begin creating projects and workflows.
+  Start here to learn how to set up your workspace, invite team members, create
+  app connections, and begin creating projects and workflows.
 </Callout>
 
 ## Getting Started
 
-<Cards>
-  <Card title="Inviting Team Members" href="/team" />
-</Cards>
+    <Steps>
+        ### Create a Project
 
+        Understand how projects play a role in organizing and managing your automations
 
-## Projects and Workflows
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/JwE3L8tmpJI?si=e84DZqRZPF9jHIkN"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
 
-<Cards>
-  <Card title="Creating Projects" href="/projects" />
-  <Card title="Managing Workflow Automations" href="/workflows" />
-  <Card title="Creating AI Agents" href="/agents" />
-</Cards>
+        ### Connect to your third party applications
 
-## App Integrations
+        Learn how to connect to gmail, slack, .etc. Once connected, your agents and workflows can perform actions on your behalf.
 
-<Cards>
-  <Card title="Connecting Your Apps" href="/connections" />
-</Cards>
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/b83bJYakaR8?si=5d5fl0sok1imQFC_"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
 
-<br/>
-<br/>
+        ### Build an AI Agent
+
+        Easily build an AI agent that can use your app connection to perform actions on your behalf.
+
+        <iframe width="560" height="315" style={{ marginTop: '20px' }} src="https://www.youtube.com/embed/kBk-swoAkY8?si=eVBmxzN0w_KVW22_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        ### Upload custom data to your knowledge notebooks
+
+        By uploading data, you give your agents access to custom data that can help them answer questions and perform complex tasks.
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/2V7A3IpyJbo?si=4RUriV0AB5bevQy1"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+
+        ### Create your first workflow
+
+        Workflows can be complex. Learn how triggers work and how actions can be configured.
+
+        <iframe width="560" height="315" style={{ marginTop: '20px' }} src="https://www.youtube.com/embed/csDLgJSMg-A?si=1c1zBpdwo4peTX7y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    </Steps>
+
+<br />
+<br />
 
 <Callout emoji="✨">
-  Thank you for choosing Lecca.io to build your workflows and agents! If you need further assistance, feel free to explore our resources or contact support at support@lecca.io.
+  Thank you for choosing Lecca.io to build your workflows and agents! If you
+  need further assistance, feel free to explore our resources or contact support
+  at support@lecca.io.
 </Callout>
