--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -4,6 +4,18 @@ import { Callout, Cards, Card } from 'nextra/components';
 
 Lecca.io's **Projects** feature serves as an organizational tool designed to facilitate automation processes and manage access to your components efficiently. Below is an overview of what Projects can do and how they benefit you:
 
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/JwE3L8tmpJI?si=e84DZqRZPF9jHIkN"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+
 <Callout emoji="📂" type="info">
   Projects provide a structured way to organize and restrict access to various
   components within Lecca.io, ensuring data integrity and facilitating
