--- a/pages/knowledge.mdx
+++ b/pages/knowledge.mdx
@@ -2,7 +2,19 @@ import { Callout, Steps } from 'nextra/components';
 
 # Knowledge Notebooks
 
-\*\*Lecca.io Knowledge Notebooks enable you to store and reuse valuable knowledge from your interactions with AI Agents.
+Lecca.io Knowledge Notebooks enable you to store and reuse valuable knowledge from your interactions with AI Agents.
+
+        <iframe
+          width="560"
+          height="315"
+          style={{ marginTop: '20px' }}
+          src="https://www.youtube.com/embed/2V7A3IpyJbo?si=4RUriV0AB5bevQy1"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
 
 ## Configuring Knowledge Notebooks
 
