--- a/pages/apps/youtube.mdx
+++ b/pages/apps/youtube.mdx
@@ -6,7 +6,9 @@ YouTube is an online video sharing platform owned by Google. This integration al
 
 ## Actions
 
-There are no actions available for the YouTube integration at this time.
+### Search Videos
+
+Searches youtube videos using a query
 
 ## Triggers
 
